Refactor Permissions and Solves